--- a/app.json
+++ b/app.json
@@ -15,7 +15,8 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.bkdeets.rnmapsdebug"
     },
     "android": {
       "adaptiveIcon": {
@@ -25,6 +26,20 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "plugins": [
+      [
+        "@rnmapbox/maps",
+        {
+          "RNMapboxMapsImpl": "mapbox-gl",
+          "RNMapboxMapsDownloadToken": "{your_key}"
+        }
+      ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "f4eeccab-1418-4946-a78c-63779c14b6c9"
+      }
     }
   }
 }
