--- a/package.json
+++ b/package.json
@@ -6,13 +6,25 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "build:dev:ios": "eas build --profile development-simulator --platform ios"
   },
   "dependencies": {
+    "@react-native-community/netinfo": "^9.3.7",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "@rnmapbox/maps": "^10.0.0-beta.72",
+    "@types/react": "~18.0.27",
+    "axios": "^1.3.4",
     "expo": "~48.0.5",
+    "expo-dev-client": "~2.1.5",
     "expo-status-bar": "~1.4.4",
+    "mapbox-gl": "^2.13.0",
     "react": "18.2.0",
-    "react-native": "0.71.3"
+    "react-native": "0.71.3",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
